@@ -1,5 +1,13 @@
 2010-09-23  Kinuko Yasuda  <kinuko@chromium.org>
 
+        Unreviewed; build fix attempt.
+
+        * src/WebWorkerBase.cpp:
+        (WebKit::WebWorkerBase::openFileSystem):
+        * src/WorkerFileSystemCallbacksBridge.h:
+
+2010-09-23  Kinuko Yasuda  <kinuko@chromium.org>
+
         Reviewed by David Levin.
 
         Add Worker support for FileSystem API
